# maturin_sandbox

./: Cargo.toml  pyproject.toml
python/: pyproject.toml
python/py_sandbox/: main.py
src/: lib.rs  parallel_jaccard_mod.rs
