[package]
name = "sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sandbox"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
pyo3-polars = { version = "*" }
polars-core = { version = "*" }
polars = { version = "*", features = ["fmt"] }
rayon = "0.9"

[package.metadata.maturin]
python-source = "python"
